# PassMan

./: Cargo.toml
passman-lib/: Cargo.toml
passman-lib/src/: lib.rs
passman-lib/src/pm/: macros.rs  mod.rs  recordstore.rs  store_io.rs
src/: main.rs
